--- a/CV.html
+++ b/CV.html
@@ -15,6 +15,34 @@
                 </hgroup>
             </div>
         </header>
+        <section>
+            <h4><b><span style="color:rgb(16, 189, 247)">EXPERIENCIA LABORAL</span></b></h4>
+            <P><span style="color:rgb(16, 189, 247)">-2022 febrero – a la actualidad.</span>Desempeño funciones en el área de
+                planificación en la Secretaria de Enlace para el Ordenamiento Territorial y
+                Desarrollo Sostenible.</P>
+            <p><span style="color:rgb(16, 189, 247)">-2021 junio – a la actualidad.</span>Rol de auditor en el sistema LINTI (Licencia
+                Nacional de transporte Interjurisdiccional)</p>
+            <p><span style="color:rgb(16, 189, 247)">-2019 junio - 2021 abril.</span>Rol de psicólogo en el Hospital Interzonal San Juan
+                Bautista. 
+                </p>
+            <hr>
+            <h4><b><span style="color:rgb(16, 189, 247)">FORMACIÓN</span></b></h4>
+            <p><span style="color:rgb(16, 189, 247)">Tecnicatura en Programacion</span>(febrero - actualidad) Universidad Tecnologica Nacional</p>
+            <p><span style="color:rgb(16, 189, 247)">Experto Universitario en Comportamiento Organizacional</span>(septiembre
+                – diciembre 2021) Universidad Tecnológica Nacional (UTN)</p>
+            <p><span style="color:rgb(16, 189, 247)">Diplomado en recursos humanos</span>(noviembre - abril 2021) Universidad
+                Tecnológica Nacional (UTN)
+                </p>
+            <p><span style="color:rgb(16, 189, 247)">Diplomado en Psicología Laboral y Organizacional</span>(febrero – marzo
+                2020)
+                </p>
+            <p><span style="color:rgb(16, 189, 247)">Licenciado en Psicología</span>(marzo 2013- diciembre 2018) Fundación
+                Barceló Facultad de Medicina – La Rioja</p>
+            <p><span style="color:rgb(16, 189, 247)">Secundario:</span> Colegio Pre-Universitario Gral. San Martin.
+                Modalidad: <span style="color:rgb(16, 189, 247)">Bachiller con orientación Bienes y Servicios</span>
+                </p>
+            <hr>
+            <h4><b><span style="color:rgb(16, 189, 247)">COMPETENCIAS</span></b></h4>
     </div>
 </body>
 </html>
