segunda parte section

--- a/CV.html
+++ b/CV.html
@@ -43,6 +43,20 @@
                 </p>
             <hr>
             <h4><b><span style="color:rgb(16, 189, 247)">COMPETENCIAS</span></b></h4>
+        <div class="columna1">
+                <h4><center>Aptitudes</center></h4>
+                <p>Responsable</p>
+                <p>Emprendedor</p>
+                <h4><center>Competencias</center></h4>
+                <p> <img src="porcentaje.jpg.jpg" width="100" style="float:right">Microsft Word</p>
+                <P><img src="porcentaje.jpg.jpg" width="100" style="float:right">Excell</P>
+                <p>Rapida adaptacion a equipos de trabajo</p>
+        </div>
+        <div class="columna2">
+            <h4>Idiomas</h4>
+            <p><img src="porcentaje2.jpg" width="100" style="float:right">Ingles avanzado</p>
+        </div>
+        </section>
     </div>
 </body>
 </html>
