aside primera parte

--- a/CV.html
+++ b/CV.html
@@ -57,6 +57,21 @@
             <p><img src="porcentaje2.jpg" width="100" style="float:right">Ingles avanzado</p>
         </div>
         </section>
+        <aside>
+            <div class="imagen">
+                <img src="foto.jpg.jpg" height="140px" width="170px">
+            </div>
+            <h4>OBJETIVO PROFESIONAL</h4>
+            <p> Poner en práctica mis
+                conocimientos adquiridos en mi
+                carrera. Cumpliendo con las
+                tareas que requiera la empresa
+                en el puesto de trabajo que me
+                desempeñe, para así alcanzar los
+                objetivos de la misma
+                contribuyendo con buen clima
+                laboral y trabajo en equipo</p>
+            <hr>
     </div>
 </body>
 </html>
