--- a/CV.html
+++ b/CV.html
@@ -72,6 +72,29 @@
                 contribuyendo con buen clima
                 laboral y trabajo en equipo</p>
             <hr>
+            <h4>DATOS PERSONALES</h4>
+            <p>Lugar y Fecha de Nacimiento:
+                La Rioja, 23/07/1991
+            <p>Edad:
+                30 años.</p>
+            <p>Tipo y N° Documentó:
+                DNI 36.436.035</p>
+            <p>Cuil/Cuit:
+                20-36436035-6</p>
+            <p>Estado Civil:
+               Soltero</p>
+            <hr>
+            <h4>DATOS DE CONTACTO/h4>
+            <p>Teléfono:
+                (0380)4937533</p>
+            <p>Mail:
+                estebanmar856@gmail.com</p>
+            <p>Dirección:
+                B° Ramírez de Velazco
+                Calle Groeber 1540</p>
+            <p><b>La Rioja - Capital</b></p>
+        <hr>
+        </aside>
     </div>
 </body>
 </html>
