--- a/CV.html
+++ b/CV.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link  href="cv.css"rel="stylesheet">
+    <link  href="pcv.css"rel="stylesheet">
     <title><b>Primer Parcial Laboratorio 2</b></title>
 </head>
 <body>
