--- a/CV.html
+++ b/CV.html
@@ -16,7 +16,7 @@
             </div>
         </header>
         <section>
-            <h4><b><span style="color:rgb(16, 189, 247)">EXPERIENCIA LABORAL</span></b></h4>
+            <h4><img src="imagen1.jpg.jpg" width="30" style="float:right"><b><span style="color:rgb(16, 189, 247)">EXPERIENCIA LABORAL</span></b></h4>
             <P><span style="color:rgb(16, 189, 247)">-2022 febrero – a la actualidad.</span>Desempeño funciones en el área de
                 planificación en la Secretaria de Enlace para el Ordenamiento Territorial y
                 Desarrollo Sostenible.</P>
@@ -26,7 +26,7 @@
                 Bautista. 
                 </p>
             <hr>
-            <h4><b><span style="color:rgb(16, 189, 247)">FORMACIÓN</span></b></h4>
+            <h4><img src="imagen2.jpg" width="30" style="float:right"><b><span style="color:rgb(16, 189, 247)">FORMACIÓN</span></b></h4>
             <p><span style="color:rgb(16, 189, 247)">Tecnicatura en Programacion</span>(febrero - actualidad) Universidad Tecnologica Nacional</p>
             <p><span style="color:rgb(16, 189, 247)">Experto Universitario en Comportamiento Organizacional</span>(septiembre
                 – diciembre 2021) Universidad Tecnológica Nacional (UTN)</p>
@@ -42,7 +42,7 @@
                 Modalidad: <span style="color:rgb(16, 189, 247)">Bachiller con orientación Bienes y Servicios</span>
                 </p>
             <hr>
-            <h4><b><span style="color:rgb(16, 189, 247)">COMPETENCIAS</span></b></h4>
+            <h4><img src="imagen3.jpg" width="30" style="float:right"><b><span style="color:rgb(16, 189, 247)">COMPETENCIAS</span></b></h4>
         <div class="columna1">
                 <h4><center>Aptitudes</center></h4>
                 <p>Responsable</p>
