--- a/CV.html
+++ b/CV.html
@@ -16,7 +16,7 @@
             </div>
         </header>
         <section>
-            <h4><b><span style="color:rgb(16, 189, 247)">EXPERIENCIA LABORAL</span></b></h4>
+            <h4><img src="imagen1.jpg.jpg" width="30" style="float:right"><b><span style="color:rgb(16, 189, 247)">EXPERIENCIA LABORAL</span></b></h4>
             <P><span style="color:rgb(16, 189, 247)">-2022 febrero – a la actualidad.</span>Desempeño funciones en el área de
                 planificación en la Secretaria de Enlace para el Ordenamiento Territorial y
                 Desarrollo Sostenible.</P>
@@ -26,7 +26,7 @@
                 Bautista. 
                 </p>
             <hr>
-            <h4><b><span style="color:rgb(16, 189, 247)">FORMACIÓN</span></b></h4>
+            <h4><img src="imagen2.jpg" width="30" style="float:right"><b><span style="color:rgb(16, 189, 247)">FORMACIÓN</span></b></h4>
             <p><span style="color:rgb(16, 189, 247)">Tecnicatura en Programacion</span>(febrero - actualidad) Universidad Tecnologica Nacional</p>
             <p><span style="color:rgb(16, 189, 247)">Experto Universitario en Comportamiento Organizacional</span>(septiembre
                 – diciembre 2021) Universidad Tecnológica Nacional (UTN)</p>
@@ -42,7 +42,7 @@
                 Modalidad: <span style="color:rgb(16, 189, 247)">Bachiller con orientación Bienes y Servicios</span>
                 </p>
             <hr>
-            <h4><b><span style="color:rgb(16, 189, 247)">COMPETENCIAS</span></b></h4>
+            <h4><img src="imagen3.jpg" width="30" style="float:right"><b><span style="color:rgb(16, 189, 247)">COMPETENCIAS</span></b></h4>
         <div class="columna1">
                 <h4><center>Aptitudes</center></h4>
                 <p>Responsable</p>
@@ -61,7 +61,7 @@
             <div class="imagen">
                 <img src="foto.jpg.jpg" height="140px" width="170px">
             </div>
-            <h4>OBJETIVO PROFESIONAL</h4>
+            <h4><span style="color:rgb(16, 189, 247)"> OBJETIVO PROFESIONAL</span></h4>
             <p> Poner en práctica mis
                 conocimientos adquiridos en mi
                 carrera. Cumpliendo con las
@@ -72,29 +72,28 @@
                 contribuyendo con buen clima
                 laboral y trabajo en equipo</p>
             <hr>
-            <h4>DATOS PERSONALES</h4>
-            <p>Lugar y Fecha de Nacimiento:
+            <h4><span style="color:rgb(16, 189, 247)">DATOS PERSONALES</span></h4>
+            <p><span style="color:rgb(16, 189, 247)">Lugar y Fecha de Nacimiento:</span>
                 La Rioja, 23/07/1991
-            <p>Edad:
+            <p><span style="color:rgb(16, 189, 247)">Edad:</span>
                 30 años.</p>
-            <p>Tipo y N° Documentó:
+            <p><span style="color:rgb(16, 189, 247)">Tipo y N° Documentó:</span>
                 DNI 36.436.035</p>
-            <p>Cuil/Cuit:
+            <p><span style="color:rgb(16, 189, 247)">Cuil/Cuit:</span>
                 20-36436035-6</p>
-            <p>Estado Civil:
+            <p><span style="color:rgb(16, 189, 247)">Estado Civil:</span>
                Soltero</p>
             <hr>
-            <h4>DATOS DE CONTACTO/h4>
-            <p>Teléfono:
+            <h4><span style="color:rgb(16, 189, 247)">DATOS DE CONTACTO/h4></span>
+            <p><span style="color:rgb(16, 189, 247)">Teléfono:</span>
                 (0380)4937533</p>
-            <p>Mail:
+            <p><span style="color:rgb(16, 189, 247)">Mail:</span>
                 estebanmar856@gmail.com</p>
-            <p>Dirección:
+            <p><span style="color:rgb(16, 189, 247)">Dirección:</span>
                 B° Ramírez de Velazco
                 Calle Groeber 1540</p>
-            
         <hr>
-        <p><b>La Rioja - Capital</b></p>
+        <p><center> <b>La Rioja - Capital</b></center></p>
         </aside>
     </div>
 </body>
